@@ -1,3 +1,10 @@
+2002-09-27  Richard Henderson  <rth@redhat.com>
+
+	* config/os/hpux/cpu_limits.h: Remove.
+
+	* include/std/std_limits.h (numeric_limits<T>::is_iec559): False
+	if denormals are not supported.
+
 2002-09-25  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/Makefile.am (target_headers): Remove cpu_limits.h.
